--- a/config.json
+++ b/config.json
@@ -9,7 +9,15 @@
       {
         "id": "3942679334",
         "name": "井川里予"
-      },{"id":"6512991534","name":"王冰冰"}
+      },
+      {
+        "id": "6512991534",
+        "name": "王冰冰"
+      },
+      {
+        "id": "2106192855",
+        "name": "赵今麦"
+      }
     ]
   }
 ]
